# grappling-hook

./: .env.example  .gitignore  drizzle.config.ts  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  vite.config.js
.github/workflows/: sveltekit-build.yml  tauri-build-release.yml
src/: app.css  app.d.ts  app.html  fallback.html  hooks.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0000_init.sql  0000_loving_psylocke.sql  0001_fresh_deathbird.sql
src-tauri/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
src-tauri/src/: lib.rs  main.rs
src/i18n/: i18n-custom-types.ts  i18n-types.ts
src/i18n/de/: index.ts
src/i18n/en/: index.ts
src/lib/: debounce.ts  error.ts  form.ts  gameStore.ts  http.ts  icons.ts  pb.ts  riot.ts  search.ts  theme.ts  time.ts  utils.ts  window.ts
src/lib/components/: Button.css  Button.svelte  ImageCropper.css  ImageCropper.svelte  Navigation.svelte  NavigationItem.svelte  SearchParamsNavigation.svelte  TabNavigation.svelte
src/lib/database/: enums.ts  index.ts  migrate.ts  schema.ts  types.ts
src/lib/league-client/: dataset.ts  generate.ts  url-enums.ts
src/lib/queries/: index.ts  tournaments.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/champion-select/: +page.svelte  index.ts  page.css
src/routes/dashboard/: +layout.svelte  +page.svelte  +page.ts  config.ts  data.ts  store.ts  utils.ts
src/routes/dialogs/: +page.svelte
src/routes/manage/: +layout.svelte  +layout.ts  (+6 more)
static/fonts/: style.css
(+100 files in other folders)
