[package]
name = "grappling-hook2"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "grappling_hook2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "macos-private-api"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-log = "2"
windows-version = "0.1.1"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-websocket = { version = "2", features = ["native-tls"] }
tauri-plugin-http = "2"
league-client = "0.2.1"
thiserror = "2.0.3"
tokio = { version = "1.28", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
url = "2.4"
serde_json = "1.0"
base64 = "0.21"
futures-util = "0.3.31"
native-tls = "0.2.12"
getrandom = "0.2.15"
http = "1.1.0"

